# voice_client

./: Makefile  main.py  pyproject.toml
listening_service/: .env  audio_input.py  audio_storage.py  chunking_processor.py  config.py  main.py  vad_processor.py
ui/: main.py
ui/templates/: index.html
