[project]
name = "voice-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.4",
    "pyaudio>=0.2.14",
    "pydantic-settings>=2.3.4",
    "sounddevice>=0.5.1",
    "wave>=0.0.2",
    "webrtcvad-wheels>=2.0.14",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]
